ecmascript/parser/tests/test262-error-references/fail/3d3e6ce2b81a224d.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/3d3e6ce2b81a224d.js:1:46
  |
1 | [[[[[[[[[[[[[[[[[[[[{a=b}]]]]]]]]]]]]]]]]]]]]
  |                                              ^

error: Unexpected token
 --> $DIR/tests/test262-parser/fail/3d3e6ce2b81a224d.js:1:22
  |
1 | [[[[[[[[[[[[[[[[[[[[{a=b}]]]]]]]]]]]]]]]]]]]]
  |                      ^^^

